# TV_Project

CurlTest/: CurlTest.cpp  libcurl.lib  stdafx.h  targetver.h
TV_server/: CMakeLists.txt  server.sln
TV_server/CurlTest/: CurlTest.vcxproj  ReadMe.txt  stdafx.cpp
TV_server/common/: HttpManager.cpp  common.vcxproj  common_template.h  message_interface.h  protoc_common.h  server_frame.cpp  server_frame.h  utilities.cpp
TV_server/common/message/: BodhiTV.pb.cc  common.pb.cc  common.pb.h  msg_game_db.pb.h  msg_game_platform.pb.cc  msg_game_platform.pb.h  msg_gate_login.pb.cc  msg_gate_login.pb.h
TV_server/databaseserver/: db_quest.cpp  game_session.cpp  stdafx.h
TV_server/gameserver/: CMakeLists.txt  Character.h  CharacterManager.cpp  CharacterManager.h  GSHttpManager.cpp  GameConfig.cpp  GameConfig.h  MovieManager.h  RecordManager.h  db_client .cpp  db_client.h  gate_session.cpp  main.cpp  session.h  stdafx.cpp  stdafx.h
TV_server/gateserver/: game_client.cpp  game_client.h  game_manager.cpp  main.cpp  user_manager.cpp  user_manager.h  user_session.cpp
TV_server/login/: CMakeLists.txt  LGHttpManager.h  account_manager.cpp  gate_manager.cpp  login_config.cpp  main.cpp  server.cpp  stdafx.h  user_session.cpp
TV_server/message/: BodhiTV.proto  gen.bat  msg_game_db.proto  msg_game_platform.proto  msg_gate_login.proto  msgs2s.proto
TV_server/virtualclient/: client.cpp  client.h  client_manager.cpp  stdafx.h
common/: HttpManager.h  utilities.h
databaseserver/: databaseserver.vcxproj  db_quest.cpp  db_quest.h  game_session.cpp  game_session.h  main.cpp  server.cpp
gameserver/: Character.cpp  Character.h  CharacterManager.cpp  CharacterManager.h  GSHttpManager.h  MovieManager.cpp  MovieManager.h  RecordManager.cpp  gameserver.vcxproj  gate_manager.cpp  main.cpp  platform_client.cpp  platform_client.h  server.cpp  server.h  session.cpp  session.h  stdafx.h
gateserver/: login_client.cpp  (+4 more)
(+26 files in other folders)
